--- a/mifirstpage/package.json
+++ b/mifirstpage/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^12.23.12",
     "git-cz": "^4.9.0",
     "motion": "^12.23.12",
+    "next-navigation": "^1.0.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.2",
